--- a/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_CFME_For_OpenShift_Deployment.adoc
+++ b/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_CFME_For_OpenShift_Deployment.adoc
@@ -9,25 +9,25 @@ Download the oo-install-ose tool here: https://bugzilla.redhat.com/attachment.cg
 
 oo-install-ose documentation is available here: https://install.openshift.com
 
-Red Hat recommends locating the oo-install-ose tool in the +/root/+ directory of the CloudForms Management Engine appliance, although this can be changed.
+Red Hat recommends locating the oo-install-ose tool in the `/root/` directory of the CloudForms Management Engine appliance, although this can be changed.
 Ensure that execution permission is enabled for the oo-install-ose files, and place the files on all appliances that have the Automation role enabled in your environment.
 
 === CloudForms Management Engine Categories and Tags
-To facilitate the deployment of OpenShift Enterprise, create the +OSE Policy+ and +OSE Status+ tag categories if they do not already exist on your system.
+To facilitate the deployment of OpenShift Enterprise, create the *OSE Policy* and *OSE Status* tag categories if they do not already exist on your system.
 	
-. Navigate to +Automate → Simulation+.
+. Navigate to menu:Automate[Simulation].
 
-. In the +Object Details+ field, select +Request+ in the +/System/Process/+ list.
+. In the *Object Details* field, select *Request* in the */System/Process/* list.
 
-. Enter +create+ in the +Message+ field.
+. Enter *create* in the *Message* field.
 			
-. Enter +osetags+ in the +Request+ field.
+. Enter *osetags* in the *Request* field.
 
-. In the +Object Attribute+ field, select +None+ in the +Type+ list.
+. In the *Object Attribute* field, select *None* in the *Type* list.
 
-. In the +Simulation Parameters+ field, select +Execute Methods+.
+. In the *Simulation Parameters* field, select *Execute Methods*.
 
-. Click +Submit+.
+. Click *Submit*.
 
-. The +OSE Policy+ and +OSE Status+ categories and tags are automatically created. The +automation.log+ file displays creation progress.
+. The *OSE Policy* and *OSE Status* categories and tags are automatically created. The `automation.log` file displays creation progress.
 	
