--- a/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_VM_For_OpenShift.adoc
+++ b/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_VM_For_OpenShift.adoc
@@ -19,13 +19,13 @@ Use the following procedure to prepare a template virtual machine:
 
 . Install Red Hat Enterprise Linux 6.4 from ISO as a basic server on a new virtual machine using Red Hat Enterprise Virtualization.
 
-. Register the virtual machine with Red Hat Subscription Manager and update the system using +yum update+.
+. Register the virtual machine with Red Hat Subscription Manager and update the system using `yum update`.
 
-. Install Ruby 1.9.3 using +yum install+.
+. Install Ruby 1.9.3 using `yum install`.
 
 . Copy the SSH key from your appliance to the virtual machine. Confirm you can open an SSH session from the appliance to the virtual machine.
 
-. Prepare the virtual machine to become a template by clearing the UDEV rules for Network and unique details from the +ifcfg-eth0+ file.
+. Prepare the virtual machine to become a template by clearing the UDEV rules for Network and unique details from the `ifcfg-eth0` file.
 
 . Power off the virtual machine and use the Red Hat Virtualization console to create a template from the virtual machine.
 			
