More edits in containers

--- a/doc-Managing_Providers/Managing_Containers.adoc
+++ b/doc-Managing_Providers/Managing_Containers.adoc
@@ -100,6 +100,7 @@ A +Container Node+ summary page allows you to view information on different aspe
 . Click the desired containers provider for viewing the provider summary.
 . In the +Relationships+ box on the right-hand side of the summary page, click +Nodes+.
 . Click the desired container node for viewing.
+. Alternatively, you can access the desired container node from menu:Containers[Container Nodes].
 
 ==== Viewing a Container Nodes Timeline
 
@@ -122,6 +123,7 @@ A +Containers+ summary page allows you to view information on different aspects 
 . Click the desired containers provider for viewing the provider summary.
 . In the +Relationships+ box on the right-hand side of the summary page, click +Containers+.
 . Click the desired container for viewing.
+. Alternatively, you can access the desired container from menu:Containers[Containers].
 
 === Viewing a Container Images Summary
 
@@ -135,6 +137,7 @@ A +Container Images+ summary page allows you to view information on different as
 . Click the desired containers provider for viewing the provider summary.
 . In the +Relationships+ box on the right-hand side of the summary page, click +Images+.
 . Click the desired image for viewing.
+. Alternatively, you can access the desired image from menu:Containers[Container Images].
 
 === Viewing an Image Registries Summary
 
@@ -149,6 +152,7 @@ An +Image Registries+ summary page allows you to view information on different a
 . Click the desired containers provider for viewing the provider summary.
 . In the +Relationships+ box on the right-hand side of the summary page, click +Image Registries+.
 . Click the desired image registry for viewing.
+. Alternatively, you can access the desired image registry from menu:Containers[Image Registries].
 
 === Viewing a Pods Summary
 
@@ -165,6 +169,7 @@ A +Pods+ summary page allows you to view information on different aspects of a p
 . Click the desired containers provider for viewing the provider summary.
 . In the +Relationships+ box on the right-hand side of the summary page, click +Pods+.
 . Click the desired pod for viewing.
+. Alternatively, you can access the desired pod from menu:Containers[Pods].
 
 === Viewing a Replicators Summary
 
@@ -179,6 +184,7 @@ A +Replicators+ summary page allows you to view information on different aspects
 . Click the desired containers provider for viewing the provider summary.
 . In the +Relationships+ box on the right-hand side of the summary page, click +Replicators+.
 . Click the desired replicator for viewing.
+. Alternatively, you can access the desired replicator from menu:Containers[Replicators].
 
 === Viewing a Container Services Summary
 
@@ -193,15 +199,17 @@ A +Container Services+ summary page allows you to view information on different 
 . Click the desired containers provider for viewing the provider summary.
 . In the +Relationships+ box on the right-hand side of the summary page, click +Services+.
 . Click the desired service for viewing.
+. Alternatively, you can access the desired service from menu:Containers[Container Services].
 
 === Using the Topology Widget
 
 The +Topology+ widget is an interactive topology graph, showing the status and relationships between the different entities of the containers providers that CloudForms Management Engine has access to.
 
 * The topology graph includes pods, containers, services, nodes, virtual machines, hosts, routes, and replicators within the overall containers provider environment.
-* It is possible to drag elements to reposition the graph.
+* Each entity in the graph displays a color indication of its status.
 * Hovering over any individual graph element will display a summary of details for the individual element.
 * Double-click the entities in the graph to navigate to their summary pages.
+* It is possible to drag elements to reposition the graph.
 * Click the legend at the top of the graph to show or hide entities.
 * Click +Display Names+ on the right-hand side of the page to show or hide entity names.
 
