As "OSE-BROKER" is not a guilabel or button, but keyboard input/literal, edited markup.

--- a/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Creating_VM_Service_Items.adoc
+++ b/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Creating_VM_Service_Items.adoc
@@ -20,12 +20,12 @@ image:6227.png[]
 . Select a destination platform from the *Catalog Item Type* list.
 image:6228.png[]
 . Enter a name and description for the service item. Red Hat recommends using the OpenShift Enterprise role as the name.
-For example, if the service item is a broker, then call it *OpenShift Enterprise Broker*.
+For example, if the service item is a broker, then call it `OpenShift Enterprise Broker`.
 image:6229.png[]
 . Select the *Request Info* tab and set the virtual machine options.
 * Select a virtual machine as a base template that conforms to the minimum requirements for OpenShift Enterprise.
 * Enter a name for the virtual machine. CloudForms Management Engine assigns numbers automatically to ensure no conflicts.
-Red Hat recommends using a name similar to the service item name, for example *OSE-BROKER*.
+Red Hat recommends using a name similar to the service item name, for example `OSE-BROKER`.
 * Set the virtual machine to *start/power on*.
 . After creating the service items, tag them with their role. This enables CloudForms Management Engine to install the correct role on the service item at the time of deployment.
 Click menu:Policy[Edit Tags].
