Updated 'Red Hat Virtualization' to 'Red Hat Enterprise Virtualization'

--- a/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_VM_For_OpenShift.adoc
+++ b/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/Preparing_VM_For_OpenShift.adoc
@@ -27,7 +27,7 @@ Use the following procedure to prepare a template virtual machine:
 
 . Prepare the virtual machine to become a template by clearing the UDEV rules for Network and unique details from the `ifcfg-eth0` file.
 
-. Power off the virtual machine and use the Red Hat Virtualization console to create a template from the virtual machine.
+. Power off the virtual machine and use the Red Hat Enterprise Virtualization console to create a template from the virtual machine.
 			
 DNS is an important element of the environment, as machines must be able to connect bi-directionally to any resource in the network using the hostname.
 That means that new virtual machines instantiated from the template need to register to your DNS system automatically.
