--- a/doc-Introduction_to_Self_Service_Portal/My_Services_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/My_Services_Tab.adoc
@@ -2,8 +2,8 @@
 
 == The My Services Tab
 
-Use the *My Services* tab to filter and view details of the services. Optionally, you can set a string in the filter field at the top to filter services by Service Name, Number of VMs, or Owner.
-You can also sort the services in ascending or descending order by Name, Retirement Date, Owner, or Creation Date. Select a service from the results to view details.
+Use the *My Services* tab to filter and view details of the services. Optionally, you can set a string in the filter field at the top to filter services by *Service Name*, *Number of VMs*, or *Owner*.
+You can also sort the services in ascending or descending order by *Name*, *Retirement Date*, *Owner*, or *Creation Date*. Select a service from the results to view details.
 
 image:cfme_ss_myservices.png[My Services Tab]
 
