Added markup to replaceable parameters such as root and vmdb_production.

--- a/doc-Installing_CloudForms_on_VMware_vSphere/Configuring_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_VMware_vSphere/Configuring_CloudForms.adoc
@@ -126,8 +126,8 @@ CloudForms Management Engine 4.x requires PostgreSQL version 9.4.
 * If this is not the first CFME appliance, select the option to fetch the key from the first CFME appliance. All CFME appliances in a multi-region deployment must use the same key.
 . Choose *2) External* for the database location.
 . Enter the database hostname or IP address when prompted.
-. Enter the database name or leave blank for the default (vmdb_production).
-. Enter the database username or leave blank for the default (root).
+. Enter the database name or leave blank for the default (`vmdb_production`).
+. Enter the database username or leave blank for the default (`root`).
 . Enter the chosen database user's password.
 . Confirm the configuration if prompted.
 
@@ -145,8 +145,8 @@ You can configure a worker appliance through the terminal. These steps demonstra
 . You are prompted to create or fetch a security key. Select the option to fetch the key from the first CFME appliance. All CFME appliances in a multi-region deployment must use the same key.
 . Choose *2) External* for the database location.
 . Enter the database hostname or IP address when prompted.
-. Enter the database name or leave blank for the default (vmdb_production).
-. Enter the database username or leave blank for the default (root).
+. Enter the database name or leave blank for the default (`vmdb_production`).
+. Enter the database username or leave blank for the default (`root`).
 . Enter the chosen database user's password.
 . Confirm the configuration if prompted.
 
