Fixed typo and markup of -e and -n options.

--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
@@ -114,7 +114,7 @@ Specifies the IP address or fully qualified domain name of the Red Hat Enterpris
 
 *Export Storage Domain Options*
 
-The following options specify the export domain to which the images will be uploaded. These options cannot be used together; you must used either the `-e option or the `-n` option.
+The following options specify the export domain to which the images will be uploaded. These options cannot be used together; you must use either the `-e` option or the `-n` option.
 
 *-e [EXPORT_DOMAIN], --export-domain=[EXPORT_DOMAIN]*
 
