--- a/doc-Installing_CloudForms_on_VMware_vSphere/master.adoc
+++ b/doc-Installing_CloudForms_on_VMware_vSphere/master.adoc
@@ -4,6 +4,7 @@ CloudForms Documentation Team <cloudforms-docs@redhat.com>
 :vernum: 4.0
 :toc: left
 :toclevels: 3
+:experimental:
 :numbered!:
 :compat-mode:
 :experimental:
