--- a/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/master.adoc
+++ b/doc-Deploying_OpenShift_Enterprise_with_Red_Hat_CloudForms/master.adoc
@@ -6,6 +6,7 @@ CloudForms Documentation Team <cloudforms-docs@redhat.com>
 :toclevels: 3
 :numbered!:
 :compat-mode:
+:experimental:
 
 :numbered:
 include::Preparing_CFME_For_OpenShift_Deployment.adoc[]
