--- a/doc-Release_Notes/enhancements.adoc
+++ b/doc-Release_Notes/enhancements.adoc
@@ -21,7 +21,7 @@ Entitlements provides the following enhancements to Red Hat:
 
 Event Switchboard::
 
-Red Hat CloudForms now has better visibility and normalization of the event handling capabilities through the introduction of a new feature, Event Switchboard. Event switchboard automates the provider events and miq policy events by handling them via
+Red Hat CloudForms now has better visibility and normalization of the event handling capabilities through the introduction of a new feature, Event Switchboard. Event Switchboard automates the provider events and miq policy events by handling them via
 automate. A new class EventStream is added to be the parent class of all event classes. Whenever an event comes in, an EventStream object is sent to automate that kicks off the event handling process. An EmsEvent instance contains all information about its
 VM, host and provider related to the event.
 +
@@ -43,7 +43,7 @@ Red Hat Access Insights Plug-In::
 With this release, users can now access Red Hat Access Insights directly from the Red Hat CloudForms appliance web user interface. Red Hat Access Insights is an automated service that provides information that helps users to rapidly identify key issues in
 their Red Hat CloudForms deployment.
 +
-Support for the Red Hat Access Insights Plug-In is in Technology Preview. See link:https://access.redhat.com/support/offerings/techpreview/[Technology Preview Features Support Scope]. 
+Support for the Red Hat Access Insights Plug-In is in Technology Preview. See link:https://access.redhat.com/support/offerings/techpreview/[Technology Preview Features Support Scope] for more information. 
 
 Microsoft Azure Providers::
 
@@ -77,7 +77,7 @@ Red Hat CloudForms now provides the ability to vendors to write their own provid
 supplying detailed information about security vulnerabilities as well as tuning recommendations. In Red Hat CloudForms 4.0, there is no sharing of data between Red Hat CloudForms and the Red Hat Insights plugin. Red Hat Insights is used as a pluggable user interface module
 to the Red Hat CloudForms user interface.
 +
-The Pluggable providers provide the following enhancement to Red Hat CloudForms:
+The pluggable providers provide the following enhancement to Red Hat CloudForms:
 +
 * Allows community to create providers for the product
 * Simplifies the previous architecture that supported providers by namespacing of the provider code giving clear separation between providers.
@@ -89,7 +89,7 @@ Users can better manage services and resources, using a user interface with widg
 +
 * Graphic images and HTML text description on the services.
 * Presentation of dialogs when a service is ordered.
-* Management of deployed services (My Services).
+* Management of deployed services (*My Services*).
 * Catalog categories, branding, and authentication.
 +
 
