added experimental to master.adoc so menu tag will render.

--- a/doc-Release_Notes/master.adoc
+++ b/doc-Release_Notes/master.adoc
@@ -6,6 +6,7 @@ CloudForms Documentation Team <cloudforms-docs@redhat.com>
 :toclevels: 3
 :numbered!:
 :compat-mode:
+:experimental:
 
 :numbered:
 include::introduction.adoc[]
@@ -29,4 +30,3 @@ include::enabling_public_amis.adoc[]
 include::changes_in_the_core_set_of_ruby_gems.adoc[]
 
 include::technical_notes.adoc[]
-
