--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
@@ -165,7 +165,7 @@ Please provide the REST API password for the admin@internal oVirt Engine user (C
 
 [IMPORTANT]
 ======
-Ensure your Red Hat Enterprise Virtualization Manager has administrator access to the chosen Export storage domain.
+Ensure your Red Hat Enterprise Virtualization Manager has administrator access to the chosen export storage domain.
 ======
 
 It takes approximately 90 minutes to upload the CloudForms Management Engine Appliance file to the Red Hat Enterprise Virtualization Manager.
