--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
@@ -70,45 +70,45 @@ There are several parameters to further refine the `engine-image-uploader` comma
 
 *General Options*
 
-*-h, --help*
+*-h, --help*::
 
 Displays information on how to use the image uploader command.
 
-*--conf-file=[PATH]*
+*--conf-file=[PATH]*::
 
 Sets *[PATH]* as the configuration file the command will use. The default is `/etc/ovirt-engine/imageuploader.conf`.
 
-*--log-file=[PATH]*
+*--log-file=[PATH]*::
 
 Sets *[PATH]* as the specific file name the command will use to write log output. The default is `/var/log/ovirt-engine/ovirt-image-uploader/ovirt-image-uploader-[date].log`.
 
-*--cert-file=[PATH]*
+*--cert-file=[PATH]*::
 
 Sets *[PATH]* as the certificate for validating the engine. The default is `/etc/pki/ovirt-engine/ca.pem`.
 
-*-i, --insecure*
+*-i, --insecure*::
 
 Specifies that no attempt will be made to verify the engine.
 
-*--quiet*
+*--quiet*::
 
 Sets quiet mode, reducing console output to a minimum.
 
-*--verbose*
+*--verbose*::
 
 Sets verbose mode, providing more console output.
 
-*-f, --force*
+*-f, --force*::
 
 Force mode is necessary when the source file being uploaded has the same file name as an existing file in the destination export domain. This option forces the existing file to be overwritten.
 
 *Red Hat Enterprise Virtualization Manager Options*
 
-*-u [USER], --user=[USER]*
+*-u [USER], --user=[USER]*::
 
 Specifies the user whose credentials will be used to execute the command. The *[USER]* is specified in the format *[username]@[domain]*. The user must exist in the specified domain and be known to the Red Hat Enterprise Virtualization Manager.
 
-*-r [FQDN], --engine=[FQDN]*
+*-r [FQDN], --engine=[FQDN]*::
 
 Specifies the IP address or fully qualified domain name of the Red Hat Enterprise Virtualization Manager from which the images will be uploaded. It is assumed that the image uploader is being run from the same machine on which the Red Hat Enterprise Virtualization Manager is installed. The default value is `localhost:443`.
 
@@ -116,31 +116,31 @@ Specifies the IP address or fully qualified domain name of the Red Hat Enterpris
 
 The following options specify the export domain to which the images will be uploaded. These options cannot be used together; you must use either the `-e` option or the `-n` option.
 
-*-e [EXPORT_DOMAIN], --export-domain=[EXPORT_DOMAIN]*
+*-e [EXPORT_DOMAIN], --export-domain=[EXPORT_DOMAIN]*::
 
 Sets the storage domain *EXPORT_DOMAIN* as the destination for uploads.
 
-*-n [NFSSERVER], --nfs-server=[NFSSERVER]*
+*-n [NFSSERVER], --nfs-server=[NFSSERVER]*::
 
 Sets the NFS path `[NFSSERVER]` as the destination for uploads.
 
-*Import Options*
+*Import Options*::
 
 The following options allow you to customize which attributes of the images being uploaded are included when the image is uploaded to the export domain.
 
-*-i, --ovf-id*
+*-i, --ovf-id*::
 
 Specifies that the `UUID` of the image will not be updated. By default, the command generates a new `UUID` for images that are uploaded. This ensures there is no conflict between the id of the image being uploaded and the images already in the environment.
 
-*-d, --disk-instance-id*
+*-d, --disk-instance-id*::
 
 Specifies that the *instance ID* for each disk in the image will not be renamed. By default, the command generates new `UUIDs` for disks in images that are uploaded. This ensures there are no conflicts between the disks on the image being uploaded and the disks already in the environment.
 
-*-m, --mac-address*
+*-m, --mac-address*::
 
 Specifies that network components in the image will not be removed from the image. By default, the command removes network interface cards from image being uploaded to prevent conflicts with network cards on other virtual machines already in the environment. If you do not use this option, you can use the *Administration Portal* to add network interface cards to newly imported images and the Manager will ensure there are no `MAC address` conflicts.
 
-*-N [NEW_IMAGE_NAME], --name=[NEW_IMAGE_NAME]*
+*-N [NEW_IMAGE_NAME], --name=[NEW_IMAGE_NAME]*::
 
 Specifies a new name for the image being uploaded.
 
