--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Configuring_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Configuring_CloudForms.adoc
@@ -91,7 +91,7 @@ Before installing an internal database, add a disk to the infrastructure hosting
 Choose disk:
 ----
 +
-Enter *1* to choose /dev/vdb for the database location.
+Enter *1* to choose `/dev/vdb` for the database location.
 
 . When prompted, enter a unique three digit region ID to create a new region.
 +
@@ -106,12 +106,12 @@ CloudForms Management Engine configures the internal database.
 
 === Configuring an External Database
 
-The postgresql.conf file used with CloudForms Management Engine databases requires specific settings for correct operation. For example, it must correctly reclaim table space, control session timeouts, and format the PostgreSQL server log for improved system support. Due to these requirements, Red Hat recommends that external CloudForms Management Engine databases use a postgresql.conf file based on the standard file used by the CloudForms Management Engine appliance.
+The `postgresql.conf` file used with CloudForms Management Engine databases requires specific settings for correct operation. For example, it must correctly reclaim table space, control session timeouts, and format the PostgreSQL server log for improved system support. Due to these requirements, Red Hat recommends that external CloudForms Management Engine databases use a `postgresql.conf` file based on the standard file used by the CloudForms Management Engine appliance.
 
-Ensure you configure the settings in the postgresql.conf to suit your system. For example, customize the shared_buffers setting according to the amount of real storage available in the external system hosting the PostgreSQL instance. In addition, depending on the aggregate number of appliances expected to connect to the PostgreSQL instance, it may be
-necessary to alter the max_connections setting.
+Ensure you configure the settings in the postgresql.conf to suit your system. For example, customize the `shared_buffers` setting according to the amount of real storage available in the external system hosting the PostgreSQL instance. In addition, depending on the aggregate number of appliances expected to connect to the PostgreSQL instance, it may be
+necessary to alter the `max_connections` setting.
 
-Because the postgresql.conf file controls the operation of all databases managed by a single instance of PostgreSQL, do not mix CloudForms Management Engine databases with other types of databases in a single PostgreSQL instance.
+Because the `postgresql.conf` file controls the operation of all databases managed by a single instance of PostgreSQL, do not mix CloudForms Management Engine databases with other types of databases in a single PostgreSQL instance.
 
 [NOTE]
 =======
@@ -127,8 +127,8 @@ CloudForms Management Engine 4.x requires PostgreSQL version 9.4.
 * If this is not the first CFME appliance, select the option to fetch the key from the first CFME appliance. All CFME appliances in a multi-region deployment must use the same key.
 . Choose *2) External* for the database location.
 . Enter the database hostname or IP address when prompted.
-. Enter the database name or leave blank for the default (vmdb_production).
-. Enter the database username or leave blank for the default (root).
+. Enter the database name or leave blank for the default (`vmdb_production`).
+. Enter the database username or leave blank for the default (`root`).
 . Enter the chosen database user's password.
 . Confirm the configuration if prompted.
 
@@ -147,8 +147,8 @@ You can configure a worker appliance through the terminal. These steps demonstra
 . You are prompted to create or fetch a security key. Select the option to fetch the key from the first CFME appliance. All CFME appliances in a multi-region deployment must use the same key.
 . Choose *2) External* for the database location.
 . Enter the database hostname or IP address when prompted.
-. Enter the database name or leave blank for the default (vmdb_production).
-. Enter the database username or leave blank for the default (root).
+. Enter the database name or leave blank for the default (`vmdb_production`).
+. Enter the database username or leave blank for the default (`root`).
 . Enter the chosen database user's password.
 . Confirm the configuration if prompted.
 
