Added missing punctuation.

--- a/doc-Installing_CloudForms_on_VMware_vSphere/Additional_Configuration.adoc
+++ b/doc-Installing_CloudForms_on_VMware_vSphere/Additional_Configuration.adoc
@@ -23,7 +23,7 @@ If you do not already have a login ID to VMware, then you will need to create on
 # /vmware-install.pl
 ----
 +
-. Accept the defaults during the installation
+. Accept the defaults during the installation.
 +
 ----
 Installing VMware VIX DiskLib API. You must read and accept the VMware VIX DiskLib API End User License Agreement to continue. Press enter to display it. Do you accept? (yes/no) yes
