--- a/doc-Managing_Providers/topics/Adding_Azure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_Azure_Providers.adoc
@@ -13,6 +13,8 @@ After a service principal account has been created in Azure, the following three
 * Tenant ID
 * Client Key
 
+To Add an Azure Provider:
+
 . Navigate to menu:Clouds[Providers].
 . Click image:images/1847.png[] (*Configuration*), then click image:images/1848.png[] (*Add a New Cloud Provider*).
 . Enter a *Name* for the provider.
