Fixed issues with internal cross references in the Managing Providers guide.

--- a/doc-Managing_Providers/Containers_Providers.adoc
+++ b/doc-Managing_Providers/Containers_Providers.adoc
@@ -6,8 +6,8 @@ The *Containers* area in the top menu bar has options to add and manage containe
 
 The supported containers provider types that you can add in CloudForms Management Engine are:
 
-* *OpenShift Enterprise*. For information on adding this provider type, see xref:Adding_an_OpenShift_Provider.adoc[Adding an OpenShift Enterprise Provider].
-* *Atomic Enterprise Platform*. For information on adding this provider type, see xref:Adding_an_Atomic_Enterprise_Provider.adoc[Adding an Atomic Enterprise Platform Provider].
+* *OpenShift Enterprise*. For information on adding this provider type, see xref:adding_openshift_provider[Adding an OpenShift Enterprise Provider].
+* *Atomic Enterprise Platform*. For information on adding this provider type, see xref:adding_atomic_provider[Adding an Atomic Enterprise Platform Provider].
 
 To successfully add an OpenShift Enterprise or Atomic Enterprise Platform provider, you must first configure a service account in a provider's cluster. For more information, see link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/managing-providers/#configuring_service_accounts[Configuring Service Accounts].
 
