--- a/doc-Managing_Providers/topics/Adding_an_Atomic_Enterprise_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_an_Atomic_Enterprise_Provider.adoc
@@ -1,3 +1,4 @@
+[[adding_atomic_provider]]
 = Adding an Atomic Enterprise Platform Provider
 
 After initial installation and creation of a CloudForms Management Engine environment and configuration of an Atomic Enterprise Platform cluster service account, add an Atomic Enterprise Platform provider by following the procedure below.
