--- a/doc-Managing_Providers/topics/Adding_an_OpenShift_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_an_OpenShift_Provider.adoc
@@ -1,3 +1,4 @@
+[[adding_openshift_provider]]
 = Adding an OpenShift Enterprise Provider
 
 After initial installation and creation of a CloudForms Management Engine environment and configuration of an OpenShift cluster service account, add an OpenShift Enterprise provider by following the procedure below.
