--- a/doc-Managing_Providers/topics/Authenticating_Red_Hat_Enterprise_Virtualization_Hosts.adoc
+++ b/doc-Managing_Providers/topics/Authenticating_Red_Hat_Enterprise_Virtualization_Hosts.adoc
@@ -1,3 +1,4 @@
+[[authenticating_rhev_hosts]]
 = Authenticating Red Hat Enterprise Virtualization Hosts
 
 After adding a Red Hat Enterprise Virtualization infrastructure provider, you must authenticate its hosts to enable full functionality. 
