--- a/doc-Managing_Providers/topics/Authenticating_VMware_vCenter_Hosts.adoc
+++ b/doc-Managing_Providers/topics/Authenticating_VMware_vCenter_Hosts.adoc
@@ -1,3 +1,4 @@
+[[authenticating_vmware_hosts]]
 = Authenticating VMware vCenter Hosts
 
 The procedure below describes how to authenticate the VMware vCenter hosts. 
