--- a/doc-Managing_Providers/topics/Discovering_Multiple_Management_Systems.adoc
+++ b/doc-Managing_Providers/topics/Discovering_Multiple_Management_Systems.adoc
@@ -11,8 +11,8 @@ Providers must be running in order for the appliance to discover them.
 +
 image::images/discover-providers.png[]
 +
-* To authenticate to Red Hat Enterprise Virtualization hosts see xref:Authenticating_Red_Hat_Enterprise_Virtualization_Hosts.adoc[Authenticating Red Hat Enterprise Virtualization Hosts]. 
-* To authenticate to VMware vCenter hosts see xref:Authenticating_VMware_vCenter_Hosts.adoc[Authenticating VMware vCenter Hosts]. 
+* To authenticate to Red Hat Enterprise Virtualization hosts see xref:authenticating_rhev_hosts[Authenticating Red Hat Enterprise Virtualization Hosts]. 
+* To authenticate to VMware vCenter hosts see xref:authenticating_vmware_hosts[Authenticating VMware vCenter Hosts]. 
 . Enter a *Subnet Range* of IP addresses starting with a *From Address* and ending with a *To Address*. The cursor automatically advances as you complete each octet. 
 +
 image::images/2196.png[]
