--- a/doc-Managing_Providers/topics/Performing_SmartState_Analysis_on_Datastores.adoc
+++ b/doc-Managing_Providers/topics/Performing_SmartState_Analysis_on_Datastores.adoc
@@ -1,3 +1,4 @@
+[[smartstate_analysis_datastore]]
 = Performing SmartState Analysis on Datastores
 
 Analyze a datastore to collect information on the types of files on a datastore, and to see the number of managed/registered, managed/unregistered, and unmanaged virtual machines.
