--- a/doc-Managing_Providers/topics/Reviewing_a_Datastore.adoc
+++ b/doc-Managing_Providers/topics/Reviewing_a_Datastore.adoc
@@ -14,5 +14,5 @@ image::images/view-datastore-new.png[]
 
 [NOTE]
 ======
-To view Content section details, run a SmartState Analysis on the datastore. For information on how to perform SmartState Analysis, see xref:Performing_SmartState_Analysis_on_Datastores.adoc[Performing SmartState Analysis on Datastores]. 
+To view Content section details, run a SmartState Analysis on the datastore. For information on how to perform SmartState Analysis, see xref:smartstate_analysis_datastore[Performing SmartState Analysis on Datastores]. 
 ======
