Edited typos, made clarifications found by Mie in translation. See https://mojo.redhat.com/docs/DOC-1057157 for details.

--- a/doc-Release_Notes/known_issues.adoc
+++ b/doc-Release_Notes/known_issues.adoc
@@ -25,7 +25,7 @@ This issue will be resolved in a future release of Red Hat CloudForms.
 
 BZ#link:https://bugzilla.redhat.com/show_bug.cgi?id=1272369[1272369]
 ------
-Currently, is not possible to edit tags on containers through the web user interface. This will be fixed in a future release so that editing tags on container entities no longer returns an error.
+Currently, it is not possible to edit tags on containers through the web user interface. This will be fixed in a future release so that editing tags on container entities no longer returns an error.
 ------
 
 BZ#link:https://bugzilla.redhat.com/show_bug.cgi?id=1279458[1279458]
@@ -35,7 +35,7 @@ In the current version of CloudForms Management Engine, the SmartState analysis 
 
 BZ#link:https://bugzilla.redhat.com/show_bug.cgi?id=1284005[1284005]
 ------
-Currently, a user_id must be specified when adding a new container provider through the REST API. Specifying a user_id is not required to add a new container provider, or in the authentication process. This field and requirement will be removed in a future release.
+Currently, a user_id must be specified when adding a new container provider through the REST API. However, specifying a user_id is not normally required to add a new container provider, or in the authentication process. This field and requirement will be removed in a future release.
 ------
 
 BZ#link:https://bugzilla.redhat.com/show_bug.cgi?id=1284257[1284257]
