--- a/doc-Release_Notes/enhancements.adoc
+++ b/doc-Release_Notes/enhancements.adoc
@@ -6,12 +6,8 @@ The following enhancements are available with Red Hat CloudForms 4.0
 
 Entitlements::
 
-Red Hat CloudForms now provides the capability of enabling
-providers based on subscription/certificates, which allows its
-shipping as a bundled product with other SKU’s such as OpenStack
-with CloudForms and OpenShift with CloudForms. Having other streams
-available for the delivery of Red Hat CloudForms increases adoption
-and provides advanced management capabilities to the users.
+Red Hat CloudForms now provides the capability of enabling providers based on subscription/certificates, which allows its shipping as a bundled product with other SKU’s such as OpenStack with CloudForms and OpenShift with CloudForms. Having other streams
+available for the delivery of Red Hat CloudForms increases adoption and provides advanced management capabilities to the users.
 +
 Entitlements provides the following enhancements to Red Hat:
 +
@@ -25,14 +21,8 @@ Entitlements provides the following enhancements to Red Hat:
 
 Event Switchboard::
 
-Red Hat CloudForms now has better visibility and normalization of
-the event handling capabilities through the introduction of a new
-feature, Event Switchboard. Event switchboard automates the
-provider events and miq policy events by handling them via
-automate. A new class EventStream is added to be the parent class
-of all event classes. Whenever an event comes in, an EventStream
-object is sent to automate that kicks off the event handling
-process. An EmsEvent instance contains all information about its
+Red Hat CloudForms now has better visibility and normalization of the event handling capabilities through the introduction of a new feature, Event Switchboard. Event Switchboard automates the provider events and miq policy events by handling them via
+automate. A new class EventStream is added to be the parent class of all event classes. Whenever an event comes in, an EventStream object is sent to automate that kicks off the event handling process. An EmsEvent instance contains all information about its
 VM, host and provider related to the event.
 +
 The Event Switchboard delivers the following capabilities:
@@ -50,13 +40,10 @@ Multi tenancy in Red Hat CloudForms offers several enhancements, with an ability
 
 Red Hat Access Insights Plug-In::
 
-With this release, users can now access Red Hat Access Insights
-directly from the Red Hat CloudForms appliance web user interface.
-Red Hat Access Insights is an automated service that provides
-information that helps users to rapidly identify key issues in
+With this release, users can now access Red Hat Access Insights directly from the Red Hat CloudForms appliance web user interface. Red Hat Access Insights is an automated service that provides information that helps users to rapidly identify key issues in
 their Red Hat CloudForms deployment.
 +
-Support for the Red Hat Access Insights Plug-In is in Technology Preview. See link:https://access.redhat.com/support/offerings/techpreview/[Technology Preview Features Support Scope]. 
+Support for the Red Hat Access Insights Plug-In is in Technology Preview. See link:https://access.redhat.com/support/offerings/techpreview/[Technology Preview Features Support Scope] for more information. 
 
 Microsoft Azure Providers::
 
@@ -73,8 +60,7 @@ The Microsoft Azure Integration will deliver the following capabilities to Red H
 
 Red Hat OpenShift v3 Providers::
 
-The integration of Red Hat OpenShift v3 providers in Red Hat
-CloudForms provides support in the following areas, with an ability to:
+The integration of Red Hat OpenShift v3 providers in Red Hat CloudForms provides support in the following areas, with an ability to:
 +
 * View the topology of the OpenShift infrastructure.
 * Link any OpenShift inventory object to its hosting infrastructure. Red Hat CloudForms can cross-link the OpenShift components to either their virtual or physical counterparts.
@@ -87,18 +73,11 @@ CloudForms provides support in the following areas, with an ability to:
 
 Pluggable Providers::
 
-Red Hat CloudForms now provides the ability to vendors to write
-their own providers for Red Hat CloudForms using community
-available practices and documentation. Previously, Red Hat Insight
-was used to identify key issues in the Red Hat CloudForms deployment by
-supplying detailed information about security vulnerabilities as
-well as tuning recommendations. In Red Hat CloudForms 4.0, there is
-no sharing of data between Red Hat CloudForms and the Red Hat
-Insights plugin. Red Hat Insights is used as a pluggable user interface module
+Red Hat CloudForms now provides the ability to vendors to write their own providers for Red Hat CloudForms using community available practices and documentation. Previously, Red Hat Insight was used to identify key issues in the Red Hat CloudForms deployment by
+supplying detailed information about security vulnerabilities as well as tuning recommendations. In Red Hat CloudForms 4.0, there is no sharing of data between Red Hat CloudForms and the Red Hat Insights plugin. Red Hat Insights is used as a pluggable user interface module
 to the Red Hat CloudForms user interface.
 +
-The Pluggable providers provide the following enhancement to Red
-Hat CloudForms:
+The pluggable providers provide the following enhancement to Red Hat CloudForms:
 +
 * Allows community to create providers for the product
 * Simplifies the previous architecture that supported providers by namespacing of the provider code giving clear separation between providers.
@@ -106,12 +85,11 @@ Hat CloudForms:
 
 Self Service Portal::
 
-Users can better manage services and resources, using a user interface with
-widgets, dashboard controls and feedback. This enhancement supports:
+Users can better manage services and resources, using a user interface with widgets, dashboard controls and feedback. This enhancement supports:
 +
 * Graphic images and HTML text description on the services.
 * Presentation of dialogs when a service is ordered.
-* Management of deployed services (My Services).
+* Management of deployed services (*My Services*).
 * Catalog categories, branding, and authentication.
 +
 
@@ -123,9 +101,7 @@ Red Hat Enterprise Linux 7.1 support::
 
 Red Hat CloudForms is fully supported on Red Hat Enterprise Linux 7.1.
 +
-Red Hat recommends delaying upgrades of Red Hat CloudForms 4.0 appliances to
-Red Hat Enterprise Linux 7.2 until the first Red Hat CloudForms 4.0 advisory
-is released noting Red Hat Enterprise Linux 7.2 support.
+Red Hat recommends delaying upgrades of Red Hat CloudForms 4.0 appliances to Red Hat Enterprise Linux 7.2 until the first Red Hat CloudForms 4.0 advisory is released noting Red Hat Enterprise Linux 7.2 support.
 
 Automate Server Role::
 In the previous version of CloudForms Management Engine, the Automate Server Role was disabled by default. Automate is required for many areas of the product, such as virtual machines, services, orchestration provisioning, custom buttons, retirement, etc. In the latest version of CloudForms Management Engine, the Automate Server Role is enabled by default. Users can still disable the role on appliances as needed.
