--- a/doc-Release_Notes/enabling_public_amis.adoc
+++ b/doc-Release_Notes/enabling_public_amis.adoc
@@ -4,7 +4,7 @@
 Alter the Main Configuration File to enable public AMIs from Amazon EC2. The following procedure makes public images viewable in CloudForms Management Engine.
 
 . Log in to the appliance.
-. Navigate to menu:Configure[Configuration > Advanced].
+. Navigate to menu:Configure[Configuration > Setting > Zone > Advanced].
 . Select the configuration file to edit from the *File* list. If not already automatically selected, select *EVM Server Main Configuration*.
 . Search for the *get_public_images* parameter:
 +
@@ -14,10 +14,9 @@ Alter the Main Configuration File to enable public AMIs from Amazon EC2. The fol
       ec2:
         get_private_images: true
         get_shared_images: true
-            get_public_images: false        ignore_terminated_instances: true  
+            get_public_images: false        ignore_terminated_instances: true
 ----
 +
 .Configure the visibility of public images:
 * To show public images, set the parameter to *get_public_images: true*.
 * To remove public images from view again, set the parameter to *get_public_images: false*.
-
