Fixed syntax errors found in search examples.

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Searching_for_Instances_or_Images.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Searching_for_Instances_or_Images.adoc
@@ -5,9 +5,9 @@ You can search in the following ways.
 
 * Type characters that are *included* in the name.
   For example, if you type `sp1`, all Instances whose names include `sp1` appear, such as `Windows2003` and `Sp1clone`.
-* Use `*` at the end of a term to search for names that *begin* with specific characters.
+* Use `\*` at the end of a term to search for names that *begin* with specific characters.
   For example, type `v*` to find all instances whose names begin with the letter `v`.
-* Use `*` at the beginning of a term to search for names that *end* with specific characters.
+* Use `\*` at the beginning of a term to search for names that *end* with specific characters.
   For example, type `*sp2` to find all instances whose names end with `sp2`.
 * Erase all characters from the search box to go back to viewing all instances.
 
