--- a/doc-NetApp_Storage_Integration_Guide/Introduction.adoc
+++ b/doc-NetApp_Storage_Integration_Guide/Introduction.adoc
@@ -13,28 +13,28 @@ Some technology preview features may only be available for specific hardware arc
 
 The following terms are used throughout this document.
 
-*Filer* 
+*Filer*
 
-A Filer is a set of hardware, software, and disks specifically designed to provide fast and reliable storage. The Filer page shows all of the systems detected by the connected storage managers. Click on a Filer from the list to see a summary view of its properties, relationships, and tags.
+A `filer` is a set of hardware, software, and disks specifically designed to provide fast and reliable storage. The *Filer* page shows all of the systems detected by the connected storage managers. Click on a *Filer* from the list to see a summary view of its properties, relationships, and tags.
 
-*LUN* 
+*LUN*
 
-A storage volume is a set of disks connected to a storage system. The LUNs page shows all of the volumes detected by the connected SMI-S agents. Click on a storage volume in the list view to see a summary view of its properties, relationships, and tags.
+A storage volume is a set of disks connected to a storage system. The *LUNs* page shows all of the storage volumes detected by the connected SMI-S agents. Click on a storage volume in the list view to see a summary view of its properties, relationships, and tags.
 
 *File Share*
 
-A File Share is an accessible directory location on a disk. The File Share page shows all of the volumes detected by the connected SMI-S agents. Click on a File Share in the list view to see a summary view of its properties, relationships, and tags.
+A file share is an accessible directory location on a disk. The *File Share* page shows all of the volumes detected by the connected SMI-S agents. Click on a *File Share* in the list view to see a summary view of its properties, relationships, and tags.
 
 *Volume*
 
-A Volume is an area of usable storage capacity on one or more physical disks. The Volumes page shows all of the Volumes detected by the connected Storage Manager. Click on a Volume in the list view to see a summary view of its properties, relationships, and tags.
+A volume is an area of usable storage capacity on one or more physical disks. The *Volumes* page shows all of the volumes detected by the connected `Storage Manager`. Click on a *Volume* in the list view to see a summary view of its properties, relationships, and tags.
 
 Click on the above items in the list view to see a summary view of the properties, relationships and tags.
 
-* Properties includes the vendor details, operational status, and health status as reported by the agent. Possible operational statuses are Starting, Stopping, Stopped, In Service, No Contact, and OK. Health status describes the health of the storage system itself, but not necessarily that of the components of the system.
-* Relationships shows the Filers, LUNs, File Shares, Local File Systems, and Volumes associated with the storage system. You can click on the items to directly view each of these relationships.
-* Infrastructure Relationships contains clickable links to the parts of your virtual infrastructure associated with the storage system.
-* Smart Management shows the tags that have been assigned using the CloudForms Management Engine Server.
+* *Properties* includes the vendor details, operational status, and health status as reported by the agent. Possible operational statuses are *Starting*, *Stopping*, *Stopped*, *In Service*, *No Contact*, and *OK*. *Health status* describes the health of the storage system itself, but not necessarily that of the components of the system.
+* *Relationships* shows the *Filers*, *LUNs*, *File Shares*, *Local File Systems*, and *Volumes* associated with the storage system. You can click on the items to directly view each of these relationships.
+* *Infrastructure Relationships* contains clickable links to the parts of your virtual infrastructure associated with the storage system.
+* *Smart Management* shows the tags that have been assigned using the CloudForms Management Engine Server.
 
 
 === Requirements
@@ -43,7 +43,6 @@ To connect a CFME server to the inventory storage manager, you need to:
 
 * Install the NetApp SDK
 * Enable Storage features and the Storage Inventory Server Role
-* Connect the Server to the Storage Manager
+* Connect the server to the Storage Manager
 
 To connect the server to the Storage Manager, you need the host name, IP address, port, and credentials for the agent. You must have an account role with the proper access to modify server roles. In addition, since this is a technology preview feature it is not automatically viewable in the CloudForms Management Engine Console. To see it, edit the main configuration file.
-
