Adding ':experimental:' attribute for 'menu' to render correctly.

--- a/doc-Defining_Policies_and_Profiles/master.adoc
+++ b/doc-Defining_Policies_and_Profiles/master.adoc
@@ -6,6 +6,7 @@ CloudForms Documentation Team <cloudforms-docs@redhat.com>
 :toclevels: 3
 :numbered!:
 :compat-mode:
+:experimental:
 
 :numbered:
 include::chap_policies.adoc[]
