--- a/doc-Deployment_Planning_Guide/master.adoc
+++ b/doc-Deployment_Planning_Guide/master.adoc
@@ -6,6 +6,7 @@ CloudForms Documentation Team <cloudforms-docs@redhat.com>
 :toclevels: 3
 :numbered!:
 :compat-mode:
+:experimental:
 
 :numbered:
 include::Introduction_to_Red_Hat_CloudForms.adoc[]
