--- a/doc-Provisioning_Virtual_Machines_and_Hosts/master.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/master.adoc
@@ -6,6 +6,7 @@ CloudForms Documentation Team <cloudforms-docs@redhat.com>
 :toclevels: 3
 :numbered!:
 :compat-mode:
+:experimental:
 
 :numbered:
 include::CFME_Lifecycle.adoc[]
