Minor formatting edit

--- a/doc-NetApp_Storage_Integration_Guide/Installation.adoc
+++ b/doc-NetApp_Storage_Integration_Guide/Installation.adoc
@@ -34,7 +34,7 @@ This procedure describes the steps to enable storage features in the CloudForms 
 [arabic]
 . Log in to the dashboard.
 . Navigate to menu:Configure[Configuration].
-. Click on the *Settings* accordion, then click +Zones+.
+. Click on the *Settings* accordion, then click *Zones*.
 . Click the *Zone* where the CloudForms Management Engine server is located.
 . In the *Servers* area, click on the CloudForms Management Engine server.
 . Click *Advanced* tab.
