syntax and link update

--- a/doc-Methods_Available_for_Automation/Methods_Available_for_Automation.adoc
+++ b/doc-Methods_Available_for_Automation/Methods_Available_for_Automation.adoc
@@ -6,20 +6,20 @@ This document describes the methods available for use in CloudForms Management E
 This document is organized by the object hierarchy in the Automate Model. 
 
 [NOTE]
-====
+======
 Users of Red Hat CloudForms can construct custom automation methods in Ruby to extend the product.
 Red Hat CloudForms ships with a core set of Ruby gems used by the CloudForms Management Engine Rails Application.
-The Ruby gems in this set are subject to change, and have changed since CloudForms 3.1 (CloudForms Management Engine 5.3). If you are calling gems using Automate that are no longer in the CloudForms Management Engine Appliance, you can install them by using the +gem install+ command. 
+The Ruby gems in this set are subject to change, and have changed since CloudForms 3.1 (CloudForms Management Engine 5.3). If you are calling gems using Automate that are no longer in the CloudForms Management Engine Appliance, you can install them by using the `gem install` command. 
 
-While gems can be imported into automation methods using [code]+require+, it is recommended that the authors of the automation methods clearly document the use of gems either in the core set or a custom set.
+While gems can be imported into automation methods using `require`, it is recommended that the authors of the automation methods clearly document the use of gems either in the core set or a custom set.
 It is the responsibility of the author of such custom automation to own the life cycle of any gem being referenced in those methods. 
 
-The _Red Hat CloudForms 4.0 Release Notes_, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/, list Ruby gems that have been added, updated, or removed in the latest version of CloudForms Management Engine.
+The link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/release-notes/release-notes[Red Hat CloudForms 4.0 Release Notes], list Ruby gems that have been added, updated, or removed in the latest version of CloudForms Management Engine.
 
 For lists of Ruby gems included in different CloudForms Management Engine releases, see the following article:
 
 * https://access.redhat.com/articles/1534753
-====
+======
 
 :leveloffset: 2
 include::topics/About_evm.root.adoc[]
@@ -200,7 +200,7 @@ include::topics/Customization_template.adoc[]
 |===
 
 [source,ruby]
-----
+------
 
 
   #########################
@@ -878,7 +878,7 @@ include::topics/Hardware_hardware.adoc[]
 
 
 
-The following table lists the metric types available for the [literal]+get_realtime_metric(metric, range, function)+ method for hosts. 
+The following table lists the metric types available for the `get_realtime_metric(metric, range, function)` method for hosts. 
 
 [cols="1,1", frame="all", options="header"]
 |===
@@ -971,7 +971,7 @@ The following table lists the metric types available for the [literal]+get_realt
 						
 |===
 
-The following Ruby snippet demonstrates using the [literal]+get_realtime_metric(metric, range, function)+ method using the [literal]+v_pct_cpu_ready_delta_summation+ metric. 
+The following Ruby snippet demonstrates using the `get_realtime_metric(metric, range, function)` method using the `v_pct_cpu_ready_delta_summation` metric. 
 
 [source,ruby]
 ----
@@ -2557,7 +2557,7 @@ These methods are available to the CloudForms Management Engine Server.
 
 
 [source,ruby]
-----
+------
 
 
   #########################
@@ -3721,7 +3721,7 @@ The following methods can be used on a virtual machine or template object.
 							
 |===
 
-The following table lists the metric types available for the [literal]+get_realtime_metric(metric, range, function)+ method for virtual machines. 
+The following table lists the metric types available for the `get_realtime_metric(metric, range, function)` method for virtual machines. 
 
 [cols="1,1", frame="all", options="header"]
 |===
@@ -3814,7 +3814,7 @@ The following table lists the metric types available for the [literal]+get_realt
 							
 |===
 
-The following Ruby snippet demonstrates using the [literal]+get_realtime_metric(metric, range, function)+ method using the [literal]+v_pct_cpu_ready_delta_summation+ metric. 
+The following Ruby snippet demonstrates using the `get_realtime_metric(metric, range, function)` method using the `v_pct_cpu_ready_delta_summation` metric. 
 
 [source,ruby]
 ----
